# finetd

./: CMakeLists.txt
.github/workflows/: cmake.yml
